<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:padding="@dimen/_20sdp"
    tools:context=".main.SignInFragment">

    <ImageView
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/img"
        android:id="@+id/logo"
        android:layout_marginBottom="@dimen/_10sdp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/Login_account"
        android:textSize="@dimen/_14sdp"
        android:id="@+id/textlogin"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"
        tools:layout_editor_absoluteX="13dp" />
    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_18sdp"
        android:hint="Email"
        android:elevation="1dp"
        android:singleLine="true"
        android:inputType="textEmailAddress"
        android:id="@+id/etemail"
        android:paddingHorizontal="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/textlogin"
        android:background="@drawable/edit_bg"
        />
    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:hint="Password"
        android:inputType="textPassword"
        android:elevation="1dp"
        android:id="@+id/etpassword"
        android:singleLine="true"
        android:drawableEnd="@drawable/eye_svgrepo_com"
        android:paddingHorizontal="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/etemail"
        android:background="@drawable/edit_bg"
        />
    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp"
        android:backgroundTint="@color/primaryColor"
        android:paddingVertical="@dimen/_10sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:text="@string/Sign_In"
        android:id="@+id/btnSignIn"
        app:cornerRadius="@dimen/_8sdp"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintTop_toBottomOf="@id/etpassword"
        />
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSignUp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnSignIn"
        android:textSize="@dimen/_12sdp"
        android:text="@string/donhave_accnt"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/inter_medium"
        android:layout_marginEnd="@dimen/_50sdp"
        android:id="@+id/textaccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnSignIn"
        android:textSize="@dimen/_14sdp"
        android:text="@string/Sign_Up"
        android:id="@+id/tvSignUp"
        android:layout_marginStart="@dimen/_2sdp"
        android:textColor="@color/primaryColor"
        android:layout_marginTop="@dimen/_17sdp"
        android:fontFamily="@font/inter_bold"
        android:layout_marginEnd="@dimen/_16sdp"
        app:layout_constraintStart_toEndOf="@id/textaccount"
        />

</androidx.constraintlayout.widget.ConstraintLayout>