<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_loc"
        android:textSize="@dimen/_13sdp"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/inter_semibold"
        android:id="@+id/tvSetLocation"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/radius"
        app:layout_constraintTop_toBottomOf="@id/tvSetLocation"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_1sdp"
        android:id="@+id/tvRadius" />
    <com.google.android.material.slider.Slider
        android:layout_width="match_parent"
        android:layout_height="@dimen/_4sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:valueTo="50"
        app:labelBehavior="visible"
        android:valueFrom="1"
        app:layout_constraintTop_toBottomOf="@id/tvRadius"
        android:layout_marginEnd="@dimen/_16sdp"
        app:thumbColor="@color/primaryColor"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_16sdp"
        app:thumbWidth="@dimen/_15sdp"
        app:trackColorActive="@color/primaryColor"
        app:trackColorInactive="@color/grey"
        app:trackHeight="@dimen/_4sdp"
        app:thumbHeight="@dimen/_15sdp"
        android:id="@+id/sliderCheckIn"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/radius"
        app:layout_constraintTop_toBottomOf="@id/sliderCheckIn"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_1sdp"
        android:id="@+id/tvRadiusCheckout" />
    <com.google.android.material.slider.Slider
        android:layout_width="match_parent"
        android:layout_height="@dimen/_4sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:valueTo="50"
        app:labelBehavior="visible"
        android:valueFrom="1"
        app:layout_constraintTop_toBottomOf="@id/tvRadiusCheckout"
        android:layout_marginEnd="@dimen/_16sdp"
        app:thumbColor="@color/primaryColor"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_16sdp"
        app:thumbWidth="@dimen/_15sdp"
        app:trackColorActive="@color/primaryColor"
        app:trackColorInactive="@color/grey"
        app:trackHeight="@dimen/_4sdp"
        app:thumbHeight="@dimen/_15sdp"
        android:id="@+id/sliderCheckOut"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply"
        app:layout_constraintTop_toBottomOf="@id/sliderCheckOut"
        android:backgroundTint="@color/primaryColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/_16sdp"
        android:id="@+id/btnApply"
        android:layout_marginEnd="@dimen/_16sdp"/>
</androidx.constraintlayout.widget.ConstraintLayout>